--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/zerooverflow/typescript-node-starter.git"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
